--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
+    <title>GATOFLIX</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
+            <h2 class="logo">GATOFLIX</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
@@ -28,9 +28,11 @@
                 <p class="descricao">Enquanto Alfredo, o Grande, defende seu reino de invasões nórdicas,
                  Uhtred - um saxão criado por vikings - planeja reivindicar o que é seu 
                  por direito.</p>
+                 <div class="botoes">
+                     <button class="botao" role="button">ASSISTIR AGORA</button>
+                     <button class="botao" role="button">MAIS INFORMAÇÕES</button>
+                 </div>
             </div>
-            <button class="botao">ASSISTIR AGORA</button>
-            <button class="botao">MAIS INFORMAÇÕES</button>
         </div>
     </main>
     
