--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
                  Uhtred - um saxão criado por vikings - planeja reivindicar o que é seu 
                  por direito.</p>
                  <div class="botoes">
-                     <button class="botao" role="button">ASSISTIR AGORA</button>
-                     <button class="botao" role="button">MAIS INFORMAÇÕES</button>
+                     <button class="botao" role="button">
+                        <i class="fas fa-play"></i> 
+                        ASSISTIR AGORA</button>
+                     <button class="botao" role="button">
+                        <i class="fas fa-info-circle"></i> 
+                        MAIS INFORMAÇÕES</button>
                  </div>
             </div>
         </div>
     </main>
-    
+    <script src="https://kit.fontawesome.com/32e37a0e69.js" crossorigin="anonymous"></script>
 </body>
 </html>
